# FWCycleTimeMonitor-RPi

./: .gitignore  README.md  STACKLIGHT_INSTALLATION_GUIDE.md  STACK_LIGHT_IMPLEMENTATION_SUMMARY.md  pyproject.toml
FWCycleDashboard/: Program.cs  README.md  fwcycle.db
FWCycleDashboard/Components/Pages/: Home.razor
FWCycleDashboard/Data/: Machine.cs
FWCycleDashboard/Migrations/: 20251113164111_AddPoESwitchConfiguration.Designer.cs  20251113164111_AddPoESwitchConfiguration.cs
FWCycleDashboard/Services/: RemoteSupervisorClient.cs
docs/: remote_supervisor_implementation.md
scripts/: install_fw_cycle_monitor.sh  test_service_exec.sh
src/fw_cycle_monitor/: config.py  gpio_monitor.py  gui.py  launcher.py  service_runner.py  state.py  updater.py
src/fw_cycle_monitor/remote_supervisor/: api.py  models.py  service_control.py  settings.py  stacklight_controller.py
systemd/: fw-cycle-monitor.service  fw-remote-supervisor.service
